--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,6 +16,11 @@ body
   margin: 100px auto 0;
 }
 
+  .message__text
+  {
+    margin-bottom: 50px;
+  }
+
   .message__text p
   {
     margin: 0 0 25px;
