--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body>
-    {{ content }}
+  <body class="page">
+    {% include header.html %}
+    {% include content.html %}
     {% include footer.html %}
   </body>
 </html>
