--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,30 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  {% if 0 == 1 %}
+  {% if 1 == 0 %}
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   {% endif %}
-  <style>body,html{margin:0;padding:0}body{font:16px/1.4 Helvetica,Arial,sans-serif}:link:hover,:visited:hover{color:red!important}:link{color:#00c;transition:color .15s ease-out}.message{width:600px;margin:100px auto 0}.message__text{margin-bottom:50px}.message__text p{margin:0 0 25px}.social{margin:0;padding:0;list-style-type:none;text-align:center}.social__item{display:inline;margin:0 5px;padding:0;vertical-align:middle}.social__icon{vertical-align:middle;transition:fill .25s ease-out}.social__link:hover .social__icon{fill:red}@media screen and (max-width:660px){.message{width:auto;margin:35px 15px 50px}}</style>
+  {% if 1 == 1 %}
+  <style>@charset "UTF-8";.social,.text ul{list-style-type:none}.social,.text hr{text-align:center}body,html{margin:0;padding:0}html{height:100%}.page{font:15px/1.4 Helvetica,Arial,sans-serif;display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:flex;flex-direction:column;min-height:100%;background:#fff}.head{position:relative;margin:40px 0}.head .social{position:absolute;right:0}.logo{font-size:18px;margin:0;line-height:1}.logo__link{color:#000;text-decoration:none}.body{flex:1 0 auto;padding-bottom:30px}.foot{font-size:13px;padding:15px 0;color:#999;border-top:1px solid rgba(0,0,0,.1)}.wrap{width:780px;margin-right:auto;margin-left:auto}:link,:visited{color:#27ae60;text-decoration:none;transition:color .15s ease-out}:link:hover,:visited:hover{color:#e74c3c!important}.post{max-width:780px;margin:0 auto 35px}.post__title{font-size:30px;font-weight:400;margin:0}.post__meta{font-size:13px;margin:0 0 5px;color:#999}.post__title-link{text-decoration:none;color:#27ae60}.post__content{margin:0}.post__comments{margin-top:35px}.message{width:600px;margin:100px auto 0}.message__text{margin-bottom:50px}.message__text p{margin:0 0 25px}.social{margin:0;padding:0}.social__item{display:inline;margin:0 5px;padding:0;vertical-align:middle}.social__icon{vertical-align:middle;transition:fill .25s ease-out}.social__link:hover .social__icon{fill:red}.text{line-height:1.6}.text img{max-width:100%;margin:10px 0 0}.text p,.text ul{margin:15px 0 0}.text p:first-child,.text ul:first-child{margin-top:10px}.text ul{padding:0}.text p+ul{margin-top:5px}.text ul li{position:relative;margin:0 0 0 5px;padding:4px 0 4px 20px}.text ul li::before{position:absolute;left:0;margin:0;content:"—"}.text code{font-size:100%;padding:.2em;background:#F7F7E7}.text hr{position:relative;display:block;box-sizing:border-box;height:30px;margin:0;background:0 0;border:none}.text hr::before{font-size:18px;position:absolute;top:0;display:inline-block;margin-top:3px;content:'...';letter-spacing:13px;line-height:1}.layout{display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:flex}.layout__column{flex:1 1}</style>
+  {% endif %}
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/{{ page.lang }}/feed.xml" />
+
+  {% if page.og %}
+  <meta property="og:type"         content="article" />
+  <meta property="og:url"          content="{{ site.url }}{{ page.url }}" />
+  <meta property="og:title"        content="{{ page.title | xml_escape }}" />
+  <meta property="og:description"  content="{{ page.og.description | xml_escape }}" />
+  <meta property="og:image"        content="{{ site.url }}{{ page.og.image }}" />
+  <meta property="og:image:width"  content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@perfception">
+  <meta name="twitter:creator" content="@mostolovista">
+  <meta name="twitter:title" content="{{ page.title | xml_escape }}">
+  <meta name="twitter:description" content="{{ page.og.description | xml_escape }}">
+  <meta name="twitter:image" content="{{ site.url }}{{ page.og.image }}">
+  {% endif %}
 
 </head>
