--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,35 @@
-<header class="site-header">
-
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-
+{% capture home_page %}/{{ page.lang }}/{% endcapture %}
+<div class="head wrap">
+  <div class="layout">
+    <div class="layout__column layout__column_50">
+      <h1 class="logo">
+        {% if page.url == home_page %}
+        {{ site.name }}
+        {% else %}
+        <a href="{{ home_page }}" class="logo__link">
+          {{ site.name }}
+        </a>
+        {% endif %}
+      </h1>
+    </div>
+    <div class="layout__column layout__column_50">
+      <ul class="social">
+        <li class="social__item">
+          <a title="Twitter" href="https://twitter.com/{{ site.twitter_username }}" class="social__link"><svg width="24" height="24" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg" class="social__icon">
+              <path d="M108.13 59.644c6.41-.53 10.756-3.443 12.43-7.396-2.313 1.42-9.49 2.97-13.453 1.492-.194-.93-.41-1.815-.623-2.613-3.02-11.09-13.36-20.023-24.195-18.945.877-.354 1.767-.684 2.652-.98 1.19-.427 8.188-1.567 7.088-4.035-.93-2.17-9.48 1.642-11.087 2.142 2.124-.8 5.64-2.174 6.014-4.616-3.257.445-6.45 1.986-8.92 4.225.892-.962 1.568-2.13 1.71-3.39-8.685 5.546-13.756 16.73-17.86 27.577-3.22-3.122-6.078-5.583-8.643-6.948-7.188-3.858-15.783-7.88-29.276-12.89-.414 4.465 2.207 10.402 9.76 14.35-1.636-.22-4.626.27-7.022.842.977 5.115 4.16 9.328 12.782 11.365-3.94.26-5.977 1.156-7.82 3.09 1.79 3.556 6.17 7.742 14.045 6.882-8.755 3.773-3.568 10.765 3.557 9.72-12.158 12.556-31.325 11.634-42.33 1.133 28.735 39.153 91.196 23.154 100.502-14.558 6.974.058 11.074-2.416 13.615-5.143-4.016.68-9.84-.022-12.926-1.308z"/>
+          </svg></a>
+        </li>
+        <li class="social__item">
+          <a title="RSS Feed" href="{{ site.url }}/{{ page.lang }}/feed.xml" class="social__link"><svg width="18" height="18" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg" class="social__icon">
+              <path d="M24.027 89.48c-3.992 0-7.577 1.61-10.21 4.233v-.003c-2.624 2.627-4.238 6.207-4.238 10.186 0 3.975 1.613 7.542 4.238 10.164 2.632 2.623 6.217 4.228 10.21 4.228 3.996 0 7.592-1.6 10.22-4.22l.01-.007c2.628-2.62 4.233-6.19 4.242-10.163-.01-3.98-1.614-7.55-4.252-10.182-2.635-2.62-6.224-4.236-10.22-4.236z"/><path d="M13.818 114.067v-.007h-.003l.003.007zM34.248 93.71v.003h.007l-.007-.003zM86.503 41.512C66.79 21.796 39.62 9.592 9.627 9.58v20.775c48.5.032 87.926 39.52 87.96 88.066h20.834c-.014-30.004-12.208-57.188-31.917-76.908z"/><path d="M9.59 46.588v20.785c13.567.008 26.402 5.337 36.004 14.955 9.602 9.586 14.91 22.438 14.93 36.056h.01v.037H81.4c-.017-19.796-8.065-37.728-21.074-50.748C47.313 54.655 29.388 46.602 9.59 46.588z"/>
+          </svg></a>
+        </li>
+        <li class="social__item">
+          <a title="Email" href="mailto:hello@perfception.com" class="social__link"><svg width="20" height="20" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" class="social__icon">
+            <path d="M1.91 16.18c-1.083.567-1.038 1.4.1 1.85l3.363 1.332c1.137.45 2.856.204 3.82-.55L23.807 7.29c.96-.758 1.064-.646.23.248L12.482 19.902c-.837.892-.59 1.984.55 2.425l.394.154c1.14.44 3 1.183 4.132 1.643l3.73 1.52c1.134.46 2.06.843 2.063.85 0 .007.006.028.012.03s.273-.962.594-2.14l5.687-20.91c.32-1.18-.302-1.68-1.385-1.112L1.912 16.18zM11.146 29.864c-.067.2 2.3-3.43 2.3-3.43.67-1.02.29-2.24-.84-2.702l-2.583-1.058c-1.132-.463-1.674.08-1.205 1.212 0 0 2.396 5.774 2.328 5.978z"/>
+          </svg></a>
+        </li>
+      </ul>
+    </div>
   </div>
-
-</header>
+</div>
