--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,25 @@
 layout: default
 ---
 <div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
-
-  <article class="post-content">
+  <p class="post__meta">
+    {{ page.date | date: "%d.%m.%Y" }}
+  </p>
+  <h2 class="post__title">
+    {{ page.title }}
+  </h2>
+  <div class="post__content text">
     {{ content }}
-  </article>
+  </div>
+  <div class="post__comments" id="disqus_thread"></div>
+  <script>
+      (function() {  // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
 
+          s.src = '//perfception.disqus.com/embed.js';
+
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </div>
