--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="post wrap">
   <p class="post__meta">
     {{ page.date | date: "%d.%m.%Y" }}
   </p>
