--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
@@ -18,8 +19,8 @@
   {% if page.og %}
   <meta property="og:type"         content="article" />
   <meta property="og:url"          content="{{ site.url }}{{ page.url }}" />
-  <meta property="og:title"        content="{{ page.title | xml_escape }}" />
-  <meta property="og:description"  content="{{ page.og.description | xml_escape }}" />
+  <meta property="og:title"        content="{{ page.title }}" />
+  <meta property="og:description"  content="{{ page.og.description }}" />
   <meta property="og:image"        content="{{ site.url }}{{ page.og.image }}" />
   <meta property="og:image:width"  content="1200" />
   <meta property="og:image:height" content="630" />
@@ -27,8 +28,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@perfception">
   <meta name="twitter:creator" content="@mostolovista">
-  <meta name="twitter:title" content="{{ page.title | xml_escape }}">
-  <meta name="twitter:description" content="{{ page.og.description | xml_escape }}">
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ page.og.description }}">
   <meta name="twitter:image" content="{{ site.url }}{{ page.og.image }}">
   {% endif %}
 
